--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -51,6 +51,9 @@
     .introduction_person {
         margin-top: 25px;
     }
+    .header_nav {
+        width: 100%;
+    }
 }
 
 @media (max-width: 740px) {
