--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -87,6 +87,7 @@
         top:0;
         left:50%;
         transform: translate(-50%,-50%);
+        --edge-height:250px;
     }
     .ourstory_imgheartwrapper {
         position: absolute;
